--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content" />
+    <!-- 
+      viewport-fit=cover: Ensures content extends into safe areas (notches, etc.)
+      interactive-widget=resizes-content: Prevents virtual keyboard from causing layout issues
+      These settings are critical for proper display on iPhone Pro Max and similar devices
+    -->
     <title>Escape The Deadline - Christmas Game</title>
   </head>
   <body>
