--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     })(window,document,'script','dataLayer','GTM-MLXV5Z9X');</script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content" />
     <!-- 
       viewport-fit=cover: Ensures content extends into safe areas (notches, etc.)
