--- a/index.html
+++ b/index.html
@@ -25,15 +25,22 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://crackwits.com/game/Christmas25" />
     <meta property="og:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta property="og:image" content="/Assets/CW-Logo.svg" />
+    <meta property="og:image" content="https://crackwits.com/game/Christmas25/Assets/CW-Logo.svg" />
+    <meta property="og:image:secure_url" content="https://crackwits.com/game/Christmas25/Assets/CW-Logo.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="CRACKWITS" />
+    <meta property="og:locale" content="en_US" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta name="twitter:image" content="/Assets/CW-Logo.svg" />
+    <meta name="twitter:image" content="https://crackwits.com/game/Christmas25/Assets/CW-Logo.svg" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
