updated seo metadata and og image

--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
       These settings are critical for proper display on iPhone Pro Max and similar devices
     -->
     
-    <!-- SEO Metadata - Values from lib/textConfig.ts -->
+    <!-- SEO Metadata - Dynamically updated by SEOHead component from lib/textConfig.ts -->
+    <!-- These are fallback values - the SEOHead component will update them on page load -->
     <title>Escape the Deadline | CRACKWITS Holiday Challenge</title>
     <meta name="description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
     <meta name="keywords" content="Christmas challenge, escape challenge, deadline challenge, skateboard challenge, holiday challenge, Crackwits" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://crackwits.com/game/Christmas25" />
+    <meta property="og:url" content="https://www.crackwits.com/game/Christmas25" />
     <meta property="og:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta property="og:image" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
-    <meta property="og:image:secure_url" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
+    <meta property="og:image" content="https://www.crackwits.com/game/Christmas25/Assets/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://www.crackwits.com/game/Christmas25/Assets/og-image.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -40,7 +41,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta name="twitter:image" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
+    <meta name="twitter:image" content="https://www.crackwits.com/game/Christmas25/Assets/og-image.jpg" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
