--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:site_name" content="CRACKWITS" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:logo" content="https://www.crackwits.com/game/christmas25/Assets/CW-Logo.svg" />
@@ -43,7 +44,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta name="twitter:image" content="https://www.crackwits.com/game/Christmas25/Assets/og-image.jpg" />
+    <meta name="twitter:image" content="https://www.crackwits.com/game/christmas25/Assets/og-image.jpg" />
+    <meta name="twitter:image:alt" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
