updated crawler verification

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <!-- Use canonical URL without www (www redirects to non-www) -->
-    <meta property="og:url" content="https://crackwits.com/game/christmas25" />
+    <!-- Canonical URL - matches actual working route -->
+    <meta property="og:url" content="https://crackwits.com/game/Christmas25" />
     <meta property="og:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
     <meta property="og:image" content="https://crackwits.com/Assets/og-image.jpg" />
@@ -43,6 +43,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
+    <meta name="twitter:text:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
     <meta name="twitter:image" content="https://crackwits.com/Assets/og-image.jpg" />
     <meta name="twitter:image:alt" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
