updated og meta fixes

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
     <meta property="og:url" content="https://crackwits.com/game/Christmas25" />
     <meta property="og:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta property="og:image" content="https://crackwits.com/Assets/og-image.jpg" />
-    <meta property="og:image:secure_url" content="https://crackwits.com/Assets/og-image.jpg" />
+    <meta property="og:image" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="840" />
     <meta property="og:image:alt" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:site_name" content="CRACKWITS" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:logo" content="https://crackwits.com/Assets/CW-Logo.svg" />
+    <meta property="og:logo" content="https://crackwits.com/game/Christmas25/Assets/CW-Logo.svg" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:text:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta name="twitter:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
-    <meta name="twitter:image" content="https://crackwits.com/Assets/og-image.jpg" />
+    <meta name="twitter:image" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
     <meta name="twitter:image:alt" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
   </head>
   <body>
