updated og meta fixes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     })(window,document,'script','dataLayer','GTM-MLXV5Z9X');</script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/game/Christmas25/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content" />
     <!-- 
       viewport-fit=cover: Ensures content extends into safe areas (notches, etc.)
@@ -26,8 +26,8 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <!-- Canonical URL - matches actual working route -->
-    <meta property="og:url" content="https://crackwits.com/game/Christmas25" />
+    <!-- Canonical URL - lowercase is canonical (uppercase redirects here) -->
+    <meta property="og:url" content="https://crackwits.com/game/christmas25" />
     <meta property="og:title" content="Escape the Deadline | CRACKWITS Holiday Challenge" />
     <meta property="og:description" content="Escape the Deadline is a CRACKWITS holiday skill-based challenge where participants skate past obstacles, avoid Grinch sabotage, collect boosts, and improve performance before the final deadline. No chance, no entry fees." />
     <meta property="og:image" content="https://crackwits.com/game/Christmas25/Assets/og-image.jpg" />
