Refactor brand display and ranking logic
Updated the brand section to include an image and adjusted the ranking logic in the score display.

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -28,11 +28,9 @@
     margin-bottom: 40px;
   }
 
-  .brand {
-    font-weight: 700;
-    letter-spacing: .25em;
-    color: #333;
-    margin-bottom: 8px;
+  .brand img {
+    height: 42px;
+    margin-bottom: 12px;
   }
 
   h1 {
@@ -133,7 +131,12 @@
 <body>
 
 <div class="header">
-  <div class="brand">CRACKWITS</div>
+  <div class="brand">
+    <img
+      src="https://fun.crackwits.com/Assets/CW-Logo.svg"
+      alt="Crackwits"
+    />
+  </div>
   <h1>ESCAPE THE DEADLINE</h1>
   <div class="subtitle">Leaderboard & Entries</div>
 </div>
@@ -174,7 +177,7 @@
   const firebaseConfig = {
     apiKey: "AIzaSyArYZSVQdexBaE3mKNSOBC3M7ldD19LESo",
     authDomain: "cw-game-a42eb.firebaseapp.com",
-    projectId: "cw-game-a42eb",
+    projectId: "cw-game-a42eb"
   };
 
   const app = initializeApp(firebaseConfig);
@@ -190,8 +193,22 @@
 
   const snap = await getDocs(q);
 
-  snap.forEach((doc, i) => {
+  let rank = 1;
+
+  snap.forEach(doc => {
     const d = doc.data();
+
+    // Handle all timestamp formats safely
+    let created = "—";
+    if (d.created_at) {
+      if (typeof d.created_at === "string") {
+        created = new Date(d.created_at).toLocaleString();
+      } else if (d.created_at.toDate) {
+        created = d.created_at.toDate().toLocaleString();
+      } else if (d.created_at.seconds) {
+        created = new Date(d.created_at.seconds * 1000).toLocaleString();
+      }
+    }
 
     const prize = d.prize_selection
       ? `<span class="badge ${d.prize_selection}">${d.prize_selection}</span>`
@@ -199,7 +216,7 @@
 
     const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td class="rank">${i + 1}</td>
+      <td class="rank">${rank++}</td>
       <td class="name">${d.player_name ?? "—"}</td>
       <td class="num">${d.distance ?? 0}m</td>
       <td class="num combo">${d.max_combo ?? "—"}x</td>
@@ -207,10 +224,9 @@
       <td class="num">😈 ${d.grinch_score ?? 0}</td>
       <td class="muted">${d.email ?? "—"}</td>
       <td>${prize}</td>
-      <td class="muted">
-        ${d.created_at?.toDate?.().toLocaleString?.() ?? "—"}
-      </td>
+      <td class="muted">${created}</td>
     `;
+
     tbody.appendChild(tr);
   });
 </script>
