--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8" />
 <title>Escape the Deadline – Scores</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
   :root {
@@ -19,7 +22,7 @@
     margin: 0;
     padding: 40px 16px 80px;
     background: var(--bg);
-    font-family: Inter, system-ui, -apple-system, sans-serif;
+    font-family: "Urbanist", system-ui, -apple-system, sans-serif;
     color: var(--text);
   }
 
