Change h1 to h2 for 'ESCAPE THE DEADLINE'

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -42,6 +42,13 @@
     letter-spacing: .06em;
   }
 
+  h1 {
+    font-size: 30px;
+    font-weigh: 400;
+    margin: 0;
+    letter-spacing: .06em;
+  }
+
   .subtitle {
     margin-top: 10px;
     color: var(--muted);
@@ -140,7 +147,7 @@
       alt="Crackwits"
     />
   </div>
-  <h1>ESCAPE THE DEADLINE</h1>
+  <h2>ESCAPE THE DEADLINE</h2>
   <div class="subtitle">Leaderboard & Entries</div>
 </div>
 
