--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>Escape the Deadline – Scores</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" type="image/svg+xml" href="../favicon.svg" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet">
