Update admin access header and password hash

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -205,7 +205,7 @@
 <div id="pw-overlay">
   <div id="pw-card">
     <img src="https://fun.crackwits.com/Assets/CW-Logo.svg" alt="Crackwits" />
-    <h3>Admin Access</h3>
+    <h3>Admin Leaderboard Access</h3>
     <input
       type="password"
       id="pw-input"
@@ -255,7 +255,7 @@
 <script>
   /* SHA-256 hash of your password */
   const PW_HASH =
-    "5c8c52c9bcecb8edc7c6f1f69e3a7c16c2c7e58a63b1615d6a8b7f1c3c8b6c91";
+    "cb1302383832b8fe27064501074f5a8e8d44357f0ec94a209f92ace5375cf340";
 
   async function sha256(text) {
     const buf = new TextEncoder().encode(text);
