--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -142,11 +142,13 @@
 #pw-overlay {
   position: fixed;
   inset: 0;
+  padding: 24px;
   background: var(--bg);
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  box-sizing: border-box;
 }
 
 #pw-card {
@@ -154,7 +156,8 @@
   border: 1px solid var(--border);
   border-radius: 12px;
   padding: 32px;
-  width: 320px;
+  width: 100%;
+  max-width: 360px;
   text-align: center;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
 }
