Change header text for admin leaderboard access

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -208,7 +208,7 @@
 <div id="pw-overlay">
   <div id="pw-card">
     <img src="https://fun.crackwits.com/Assets/CW-Logo.svg" alt="Crackwits" />
-    <h3>Admin Leaderboard Access</h3>
+    <h3>Admin Access</h3>
     <input
       type="password"
       id="pw-input"
