Update styles for #pw-card input and button
Refactor styles for input and button elements in #pw-card.

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -172,25 +172,22 @@
   font-weight: 500;
 }
 
-#pw-card input {
+#pw-card input,
+#pw-card button {
   width: 100%;
-  padding: 12px;
-  border-radius: 8px;
-  border: 1px solid var(--border);
+  height: 48px;
+  box-sizing: border-box;
   font-family: inherit;
   font-size: 15px;
-  margin-bottom: 12px;
+  border-radius: 8px;
+  display: block;
 }
 
 #pw-card button {
-  width: 100%;
-  padding: 12px;
-  border-radius: 8px;
-  border: none;
+  margin-top: 6px;
+  border: 1px solid transparent;
   background: #111;
   color: #fff;
-  font-family: inherit;
-  font-size: 15px;
   cursor: pointer;
 }
 
