Enhance input styling in password card
Add styles for input fields in password card

--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -190,6 +190,10 @@
   color: #fff;
   cursor: pointer;
 }
+#pw-card input {
+  border: 0.5px solid #cbd5e1;
+  padding: 0 12px;
+}
 
 #pw-error {
   display: none;
