--- a/public/admin/scores.html
+++ b/public/admin/scores.html
@@ -184,7 +184,7 @@
 }
 
 #pw-card button {
-  margin-top: 6px;
+  margin-top: 15px;
   border: 1px solid transparent;
   background: #111;
   color: #fff;
@@ -193,6 +193,8 @@
 #pw-card input {
   border: 0.5px solid #cbd5e1;
   padding: 0 12px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
 }
 
 #pw-error {
